dark/light button was covering text, I fixed it. In Contributing.md I changed Healthcare-Platform to Medical-Website. And I also changed OriginalOwner to tushargupta1504

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ header{
 .dark-btn-navbar{
    padding-left: 6em;
    margin-bottom: 5em;
+   position: relative;
 }
 
 header .navbar a{
